--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -161,19 +161,19 @@
   <!-- Contact Info Grid -->
  <div class="contact-grid">
   <div class="contact-item left">
-    <strong>LinkedIn:</strong><br>
+    <strong>LinkedIn:</strong>
     linkedin.com/in/aditya-barve-fswd
   </div>
   <div class="contact-item right">
-    <strong>Phone:</strong><br>
+    <strong>Phone:</strong>
     +91-9137818209
   </div>
   <div class="contact-item left">
-    <strong>Email:</strong><br>
+    <strong>Email:</strong>
     adityabarve28@gmail.com
   </div>
   <div class="contact-item right">
-    <strong>Portfolio:</strong><br>
+    <strong>Portfolio:</strong>
     adityabarve28.github.io
   </div>
 </div>
