--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -32,7 +32,7 @@
     .left-column, .right-column {
       width: 50%;
       box-sizing: border-box;
-      padding: 20px;
+      padding: 0 20px 20px 20px;
     }
 
     h1 {
@@ -82,7 +82,7 @@
 
 .contact-item {
   width: 48%;
-  margin-bottom: 8px;
+  margin-bottom: 0px;
   font-size: 0.95rem;
   color: #4b5563;
 }
