--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -9,6 +9,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
   <style>
+    *{
+      margin: 0 !important;
+    }
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f3f4f6;
