--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -9,84 +9,84 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
   <style>
-/*     *{
-      margin: 0 !important;
-    } */
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f3f4f6;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f3f4f6;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 0.85rem;
+}
 
-    .resume-container {
-      width: 100%;
-      max-width: 1000px;
-      background-color: white;
-      padding: 30px;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+.resume-container {
+  width: 100%;
+  max-width: 900px;
+  background-color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-    .left-column, .right-column {
-      width: 50%;
-      box-sizing: border-box;
-      padding: 0 20px 20px 20px;
-    }
+.left-column, .right-column {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 10px 10px 10px;
+}
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      color: #1f2937;
-      text-align: center;
-      width: 100%;
-    }
+h1 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+  width: 100%;
+  margin: 10px 0;
+}
 
-    h2 {
-      font-size: 1.25rem;
-      font-weight: 600;
-      margin: 20px 0 10px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 4px;
-      color: #1f2937;
-    }
+h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 10px 0 6px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2px;
+  color: #1f2937;
+}
 
-    h3 {
-      font-size: 1.05rem;
-      font-weight: 600;
-      margin-top: 12px;
-      color: #374151;
-    }
+h3 {
+  font-size: 0.95rem;
+  font-weight: 600;
+  margin-top: 8px;
+  color: #374151;
+}
 
-    p, li {
-      font-size: 0.95rem;
-      line-height: 1.5;
-      color: #4b5563;
-      text-align: justify;
-    }
+p, li {
+  font-size: 0.85rem;
+  line-height: 1.3;
+  color: #4b5563;
+  text-align: justify;
+  margin: 0 0 4px;
+}
 
-    ul {
-      list-style-type: disc;
-      margin-left: 20px;
-    }
+ul {
+  list-style-type: disc;
+  margin-left: 16px;
+  padding-left: 0;
+}
 
 .contact-grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   width: 100%;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 .contact-item {
   width: 48%;
-  margin-bottom: 0px;
-  font-size: 0.95rem;
+  font-size: 0.85rem;
   color: #4b5563;
 }
 
@@ -104,43 +104,42 @@
   flex-direction: column;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
 
-    .modal-overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
+.modal-content {
+  background: white;
+  padding: 16px;
+  border-radius: 6px;
+  text-align: center;
+  max-width: 400px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
 
-    .modal-content {
-      background: white;
-      padding: 24px;
-      border-radius: 8px;
-      text-align: center;
-      max-width: 400px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
+@media print {
+  body {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+  }
 
-    @media print {
-      body {
-        background-color: white;
-        margin: 0;
-        padding: 0;
-      }
+  .modal-overlay {
+    display: none !important;
+  }
 
-      .modal-overlay {
-        display: none !important;
-      }
-
-      .resume-container {
-        box-shadow: none;
-        padding: 10px;
-      }
-    }
+  .resume-container {
+    box-shadow: none;
+    padding: 10px;
+  }
+}
   </style>
 </head>
 <body>
@@ -246,12 +245,13 @@
           } else if (action === 'download') {
             const element = document.getElementById('resume');
             const options = {
-              margin: 0.2,
-              filename: 'Aditya-Barve-PHP-Resume.pdf',
-              image: { type: 'jpeg', quality: 0.98 },
-              html2canvas: { scale: 2 },
-              jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-            };
+                              margin: 0,
+                              filename: 'Aditya-Barve-PHP-Resume.pdf',
+                              image: { type: 'jpeg', quality: 1 },
+                              html2canvas: { scale: 2 },
+                              jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+                            };
+
             html2pdf().set(options).from(element).save();
           }
         } else {
