--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -1,183 +1,274 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Barve - Java/Spring Boot Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aditya Barve - Java / SpringBoot Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-  <script>
-  window.onload = function () {
-    const choice = confirm("Do you want to print your resume?\nClick 'Cancel' to download it as PDF.");
+  <style>
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f3f4f6;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 0.85rem;
+}
 
-    if (choice) {
-      window.print(); // Print resume
-    } else {
-      // Download as PDF
-      const element = document.body; // You can change this to a specific resume container
-      html2pdf().from(element).save('Aditya-Barve-JAVA-Resume.pdf');
-    }
-  };
-</script>
+.resume-container {
+  width: 100%;
+  max-width: 900px;
+  background-color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-        }
-        .resume-container {
-            background-color: #ffffff;
-            max-width: 800px;
-            width: 100%;
-            padding: 40px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 12px;
-        }
-        h1 {
-            font-size: 2.25rem; /* 36px */
-            font-weight: 700;
-            color: #1f2937;
-            margin-bottom: 10px;
-        }
-        h2 {
-            font-size: 1.5rem; /* 24px */
-            font-weight: 600;
-            color: #1f2937;
-            margin-top: 25px;
-            margin-bottom: 15px;
-            border-bottom: 2px solid #e5e7eb;
-            padding-bottom: 5px;
-        }
-        h3 {
-            font-size: 1.125rem; /* 18px */
-            font-weight: 600;
-            color: #374151;
-            margin-top: 15px;
-        }
-        p, ul {
-            font-size: 1rem; /* 16px */
-            line-height: 1.6;
-            color: #4b5563;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 8px;
-        }
-        .contact-info a {
-            color: #2563eb;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-        .project-description {
-            font-style: italic;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            color: #6b7280;
-        }
-        .technologies {
-            font-size: 0.9rem;
-            color: #6b7280;
-            margin-top: 5px;
-        }
-        @media print {
-            body {
-                background-color: #ffffff;
-                padding: 0;
-            }
-            .resume-container {
-                box-shadow: none;
-                border-radius: 0;
-                padding: 20px;
-                max-width: none;
-            }
-        }
-    </style>
+.left-column, .right-column {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 10px 10px 10px;
+}
+
+h1 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+  width: 100%;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 10px 0 6px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2px;
+  color: #1f2937;
+}
+
+h3 {
+  font-size: 0.95rem;
+  font-weight: 600;
+  margin-top: 8px;
+  color: #374151;
+}
+
+p, li {
+  font-size: 0.85rem;
+  line-height: 1.3;
+  color: #4b5563;
+  text-align: justify;
+  margin: 0 0 4px;
+}
+
+ul {
+  list-style-type: disc;
+  margin-left: 16px;
+  padding-left: 0;
+}
+
+.contact-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 0 10px;
+}
+
+.contact-item {
+  width: 48%;
+  font-size: 0.85rem;
+  color: #4b5563;
+}
+
+.contact-item.left {
+  text-align: left;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-item.right {
+  text-align: right;
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: white;
+  padding: 16px;
+  border-radius: 6px;
+  text-align: center;
+  max-width: 400px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+@media print {
+  body {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+  }
+
+  .modal-overlay {
+    display: none !important;
+  }
+
+  .resume-container {
+    box-shadow: none;
+    padding: 10px;
+  }
+}
+  </style>
 </head>
 <body>
-    <div class="resume-container">
-<!--         <div class="text-right mb-4">
-          <button onclick="window.print()" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">
-            Download as PDF
-          </button>
-        </div>
- -->
-        <h1 class="text-center">ADITYA BARVE</h1>
-        <div class="contact-info text-center text-gray-600 mb-8">
-            <p>https://www.linkedin.com/in/aditya-barve-fswd/</p> |
-            +91-9137818209 |
-            adityabarve28@gmail.com |
-            <p>https://adityabarve28.github.io/portfolio/</p>
-        </div>
-
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <strong>Shivajirao S Jondhale College of Engineering</strong>, Bachelor of Engineering in Information Technology, Dombivli | Sept 2021 - August 2024
-            </li>
-            <li>
-                <strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma in Information Technology, Asangaon | August 2017 - June 2021
-            </li>
-            <li>
-                <strong>Shakuntala Vidyalaya School</strong>, SSC | June 2016 - June 2017
-            </li>
-        </ul>
-
-        <h2>Technical Skills</h2>
-        <ul class="list-none ml-0">
-            <li><strong>Web Technologies:</strong> HTML, CSS, Bootstrap, JavaScript, Thymeleaf</li>
-            <li><strong>Backend Technologies:</strong> Core Java</li>
-            <li><strong>Frameworks:</strong> Spring, Spring Boot, Hibernate</li>
-            <li><strong>Database:</strong> MySQL</li>
-            <li><strong>Build Tools:</strong> Maven</li>
-            <li><strong>IDE:</strong> VSCode, Spring Tool Suite, Eclipse</li>
-        </ul>
-        <h2>Experience</h2>
-        <h3 class="mt-4">PHP Developer | Onkar E Learnings & Solutions LLP</h3>
-        <p class="text-gray-600 italic">March 01, 2025 — Present</p>
-        <ul class="list-disc ml-6">
-            <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
-            <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
-            <li>Built and integrated APIs for various functionalities.</li>
-            <li>Implemented payment gateway integrations for e-commerce solutions.</li>
-            <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
-            <li>Engaged directly with clients to understand requirements and provide solutions.</li>
-            <li>Demonstrated leadership in project execution and problem-solving.</li>
-        </ul>
-        <h2>Projects</h2>
-        <h3 class="mt-4">Task Management System</h3>
-        <p class="project-description">A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.</p>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, Spring Boot, Java, REST APIs</p>
-
-        <h3 class="mt-4">Library Management System (Spring Boot REST)</h3>
-        <ul class="list-disc ml-6">
-            <li>Built a REST API-based Library Management System using Spring Boot, enabling efficient data operations.</li>
-            <li>Implemented core components (Controllers, Services, Repositories) with modular architecture for maintainability.</li>
-            <li>Streamlined operations for user registration, book transactions, availability tracking, and returns, improving resource management.</li>
-            <li>Utilized Spring Data JPA for seamless database interactions, achieving fast and reliable data access.</li>
-            <li>Delivered a scalable solution to effectively manage library resources and transactions.</li>
-        </ul>
-        <p class="technologies">Technologies: Spring Boot, REST API, Spring Data JPA, MySQL</p>
-
-        <h3 class="mt-4">Wisemoney: An Expense Tracker App (Spring Boot)</h3>
-        <ul class="list-disc ml-6">
-            <li>Wisemoney is a Spring Boot-based financial management web application designed to simplify personal finance tracking and analysis. Provided functionalities for customer and product management, boosting operational efficiency.</li>
-            <li>Developed a RESTful API using Spring Boot for efficient and scalable backend services.</li>
-            <li>Integrated MySQL database for secure and reliable data storage, with Hibernate handling database operations.</li>
-            <li>Designed a user-friendly interface using Thymeleaf, HTML, and CSS, ensuring seamless user interactions.</li>
-            <li>Implemented functionalities for user authentication, financial goal tracking, and expense categorization.</li>
-        </ul>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, Spring Boot, Hibernate, MySQL, Maven, Thymeleaf</p>
+  <!-- Modal -->
+  <div id="actionModal" class="modal-overlay">
+    <div class="modal-content">
+      <h2 class="text-lg font-semibold text-gray-800 mb-4">Choose Action</h2>
+      <p class="text-gray-600 mb-6">Would you like to Print or Download the resume?</p>
+      <div class="flex justify-center space-x-4 mb-4">
+        <button onclick="handleAction('print')" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">Print</button>
+        <button onclick="handleAction('download')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Download</button>
+      </div>
+      <button onclick="closeModal()" class="text-sm text-gray-500 hover:text-gray-700 underline">Close</button>
     </div>
+  </div>
+
+  <!-- Resume Content -->
+  <div class="resume-container" id="resume">
+    <h1>ADITYA BARVE</h1>
+
+  <!-- Contact Info Grid -->
+ <div class="contact-grid">
+  <div class="contact-item left">
+    <strong>LinkedIn:</strong>
+    linkedin.com/in/aditya-barve-fswd
+  </div>
+  <div class="contact-item right">
+    <strong>Phone:</strong>
+    +91-9137818209
+  </div>  
+  <div class="contact-item left">
+    <strong>Portfolio:</strong>
+    adityabarve28.github.io
+  </div>
+   <div class="contact-item right">
+    <strong>Email:</strong>
+    adityabarve28@gmail.com
+  </div>
+</div>
+
+
+
+    <!-- Left Column -->
+    <div class="left-column">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024)</li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021)</li>
+        <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
+      </ul>
+
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Web:</strong> HTML, CSS, Bootstrap, JavaScript, Thymeleaf</li>
+        <li><strong>Backend:</strong> Java</li>
+        <li><strong>Framework:</strong> SpringBoot, Spring, Hibernate</li>
+        <li><strong>Database:</strong> MySQL</li>
+        <li><strong>Build Tools:</strong> Maven</li>
+        <li><strong>IDE:</strong> VSCode, Spring Tool Suite, Eclipse</li>
+      </ul>
+       <h2>Experience</h2>
+      <h3>PHP Developer | Onkar E Learnings & Solutions LLP</h3>
+      <p><em>March 01, 2025 — Present</em></p>
+      <ul>
+        <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
+        <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
+        <li>Built and integrated APIs for various functionalities.</li>
+        <li>Implemented payment gateway integrations for e-commerce solutions.</li>
+        <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
+        <li>Engaged directly with clients to understand requirements and provide solutions.</li>
+        <li>Demonstrated leadership in project execution and problem-solving.</li>
+      </ul>
+    </div>
+
+    <!-- Right Column -->
+    <div class="right-column">
+      <h2>Projects</h2>
+      <h3>Task Management System</h3>
+      <p>A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration</p>
+      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, Spring Boot, Java, REST APIs </p>
+
+      <h3>Library Management System (Spring Boot REST)</h3>
+      <p>Built a REST API-based Library Management System using Spring Boot, enabling efficient data operations<br>Implemented core components (Controllers, Services, Repositories) with modular architecture for maintainability<br>Streamlined operations for user registration, book transactions, availability tracking, and returns, improving resource management.<br>Utilized Spring Data JPA for seamless database interactions, achieving fast and reliable data access.<br>Delivered a scalable solution to effectively manage library resources and transactions</p>
+      <p><strong>Technologies:</strong> Spring Boot, REST API, Spring Data JPA, MySQL</p>
+
+      <h3>Wisemoney: An Expense Tracker App (Spring Boot)</h3>
+      <p>Wisemoney is a Spring Boot-based financial management web application designed to simplify personal finance tracking and analysis. Provided functionalities for customer and product management, boosting operational efficiency.<br>Developed a RESTful API using Spring Boot for efficient and scalable backend services.<br>Integrated MySQL database for secure and reliable data storage, with Hibernate handling database operations<br>Designed a user-friendly interface using Thymeleaf, HTML, and CSS, ensuring seamless user interactions.<br>Implemented functionalities for user authentication, financial goal tracking, and expense categorization.</p>
+      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP, MySQL</p>
+
+      <h3>Mycreations</h3>
+      <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
+      <p><strong>Technologies:</strong>  HTML, CSS, Bootstrap, Spring Boot, Hibernate, MySQL, Maven, Thymeleaf</p>
+    </div>
+  </div>
+
+  <script>
+    function handleAction(action) {
+      const modal = document.getElementById('actionModal');
+      modal.style.display = 'none';
+      setTimeout(() => {
+        if (confirm(`Are you sure you want to ${action}?`)) {
+          if (action === 'print') {
+            window.print();
+          } else if (action === 'download') {
+            const element = document.getElementById('resume');
+            const options = {
+                              margin: 0.1,
+                              filename: 'Aditya-Barve-PHP-Resume.pdf',
+                              image: { type: 'jpeg', quality: 1 },
+                              html2canvas: { scale: 2 },
+                              jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+                            };
+
+            html2pdf().set(options).from(element).save();
+          }
+        } else {
+          modal.style.display = 'flex';
+        }
+      }, 300);
+    }
+
+    function closeModal() {
+      document.getElementById('actionModal').style.display = 'none';
+    }
+
+    window.onload = () => {
+      document.getElementById('actionModal').style.display = 'flex';
+    };
+  </script>
 </body>
 </html>
