--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -228,11 +228,11 @@ ul {
 
       <h3>Wisemoney: An Expense Tracker App (Spring Boot)</h3>
       <p>Wisemoney is a Spring Boot-based financial management web application designed to simplify personal finance tracking and analysis. Provided functionalities for customer and product management, boosting operational efficiency.<br>Developed a RESTful API using Spring Boot for efficient and scalable backend services.<br>Integrated MySQL database for secure and reliable data storage, with Hibernate handling database operations<br>Designed a user-friendly interface using Thymeleaf, HTML, and CSS, ensuring seamless user interactions.<br>Implemented functionalities for user authentication, financial goal tracking, and expense categorization.</p>
-      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP, MySQL</p>
-
-      <h3>Mycreations</h3>
-      <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
       <p><strong>Technologies:</strong>  HTML, CSS, Bootstrap, Spring Boot, Hibernate, MySQL, Maven, Thymeleaf</p>
+
+<!--       <h3>Mycreations</h3>
+      <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
+      <p><strong>Technologies:</strong> </p> -->
     </div>
   </div>
 
