--- a/index.html
+++ b/index.html
@@ -388,6 +388,10 @@
             <div class="flex flex-col sm:flex-row justify-center gap-4">
                 <a href="/portfolio/Aditya-Barve-PHP-Resume.html"
                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
+                    Download All In 1 Resume
+                </a>
+                <a href="/portfolio/Aditya-Barve-PHP-Resume.html"
+                   class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
                     Download PHP Resume
                 </a>
                 <a href="/portfolio/Aditya-Barve-JAVA-Resume.html"
@@ -492,3 +496,4 @@
     </script>
 </body>
 </html>
+
