--- a/index.html
+++ b/index.html
@@ -195,48 +195,91 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-16 md:py-24 bg-stone-100 container mx-auto px-6">
-        <h2 class="text-4xl font-bold section-header mb-8">My Skills</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="card p-6">
-                <h3 class="text-2xl font-semibold mb-4 text-gray-800">Front-End</h3>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Bootstrap</li>
-                </ul>
-            </div>
-            <div class="card p-6">
-                <h3 class="text-2xl font-semibold mb-4 text-gray-800">Back-End</h3>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>PHP</li>
-                    <li>Java</li>
-                    <li>Laravel</li>
-                    <li>Spring Boot</li>
-                    <li>API Development & Integration</li>
-                    <li>Payment Gateway Integration</li>
-                </ul>
-            </div>
-            <div class="card p-6">
-                <h3 class="text-2xl font-semibold mb-4 text-gray-800">DevOps & Hosting</h3>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>CPanel</li>
-                    <li>AApanel</li>
-                    <li>VPS</li>
-                    <li>Shared Hosting</li>
-                    <li>DNS Management</li>
-                </ul>
-            </div>
-            <div class="card p-6">
-                <h3 class="text-2xl font-semibold mb-4 text-gray-800">Soft Skills</h3>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>Communication</li>
-                    <li>Client Handling</li>
-                    <li>Leadership</li>
-                </ul>
-            </div>
+    <!-- Skills Section -->
+<section id="skills" class="py-16 md:py-24 bg-stone-100 container mx-auto px-6">
+    <h2 class="text-4xl font-bold section-header mb-8">My Skills</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+        <!-- Front-End -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">Front-End</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>JavaScript</li>
+            </ul>
         </div>
-    </section>
+
+        <!-- Back-End -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">Back-End</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>PHP</li>
+                <li>Java</li>
+                <li>Laravel</li>
+                <li>Spring Boot</li>
+                <li>API Development & Integration</li>
+                <li>Payment Gateway Integration</li>
+            </ul>
+        </div>
+
+        <!-- DevOps & Hosting -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">DevOps & Hosting</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>CPanel</li>
+                <li>AApanel</li>
+                <li>VPS</li>
+                <li>Shared Hosting</li>
+                <li>DNS Management</li>
+            </ul>
+        </div>
+
+        <!-- SEO -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">SEO</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>Basic On-Page SEO</li>
+                <li>Basic Off-Page SEO</li>
+                <li>Keyword Research</li>
+                <li>SEO-Friendly Content</li>
+            </ul>
+        </div>
+
+        <!-- Programming Languages -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">Programming Languages</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>C</li>
+                <li>C++</li>
+                <li>Java</li>
+                <li>PHP</li>
+            </ul>
+        </div>
+
+        <!-- Design Tools -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">Design Tools</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>Canva</li>
+                <li>Figma</li>
+            </ul>
+        </div>
+
+        <!-- Soft Skills -->
+        <div class="card p-6">
+            <h3 class="text-2xl font-semibold mb-4 text-gray-800">Soft Skills</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>Communication</li>
+                <li>Client Handling</li>
+                <li>Leadership</li>
+            </ul>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- Experience Section -->
     <section id="experience" class="py-16 md:py-24 container mx-auto px-6">
@@ -496,5 +539,6 @@
     </script>
 </body>
 </html>
+
 
 
