--- a/Gauri-Resume.html
+++ b/Gauri-Resume.html
@@ -160,7 +160,8 @@
           <li>Attention to Detail</li>
           <li>Handling Confidential Information</li>
           <li>Quick Learner</li>
-          <li>English Typing (30 WPM)</li>
+          <li>English Typing (40 WPM)</li>
+<li>Marathi Typing (30 WPM)</li>
         </ul>
       </div>
 
