--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
                 <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=Culinary+Destination" alt="Culinary Destination Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">Culinary Destination</h4>
                 <p class="text-gray-700 mb-4 project-description">
-                    A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.
+                    A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menu, view orders and a fully functional visually appealing sales analytical dashboard potentially payment integration, providing a complete e-commerce solution for the food industry.
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
-                    <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
+                    <a href="https://hoteltest.empowermental.co.in/" class="text-blue-700 hover:underline font-medium">View Consumer Dashboard &rarr;</a>
 <!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Culinary Destination', 'A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
@@ -539,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
