--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <h3 class="text-3xl font-bold text-gray-800 mb-6">PHP, Laravel Projects</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-10 mb-12">
             <div class="card p-6">
-                <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=EmpowerMental" alt="EmpowerMental Project" class="rounded-lg mb-4 w-full">
+                <img src="../assets/images/s2.png" alt="EmpowerMental Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">EmpowerMental</h4>
                 <p class="text-gray-700 mb-4 project-description">
                     A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.
@@ -539,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
