--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <h3 class="text-3xl font-bold text-gray-800 mb-6">PHP, Laravel Projects</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-10 mb-12">
             <div class="card p-6">
-                <img src="../assets/images/s2.png" alt="EmpowerMental Project" class="rounded-lg mb-4 w-full">
+                <img src="./assets/images/s2.png" alt="EmpowerMental Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">EmpowerMental</h4>
                 <p class="text-gray-700 mb-4 project-description">
                     A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.
@@ -320,7 +320,7 @@
                 </div>
             </div>
             <div class="card p-6">
-                <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=Codechieve" alt="Codechieve Project" class="rounded-lg mb-4 w-full">
+                <img src="./assets/images/s4.png" alt="Codechieve Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">Codechieve</h4>
                 <p class="text-gray-700 mb-4 project-description">
   A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions. Codechieve helps startups and small businesses build their online presence with clean design, scalable code, and performance-first development.
@@ -331,7 +331,7 @@
                 </div>
             </div>
             <div class="card p-6">
-                <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=Culinary+Destination" alt="Culinary Destination Project" class="rounded-lg mb-4 w-full">
+                <img src="./assets/images/s3.png" alt="Culinary Destination Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">Culinary Destination</h4>
                 <p class="text-gray-700 mb-4 project-description">
                     A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menu, view orders and a fully functional visually appealing sales analytical dashboard potentially payment integration, providing a complete e-commerce solution for the food industry.
@@ -539,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
