--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -225,7 +225,7 @@ ul {
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
       <h3>Culinary Destination</h3>
-      <p>A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.</p>
+      <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menu, view orders and a fully functional visually appealing sales analytical dashboard potentially payment integration, providing a complete e-commerce solution for the food industry.</p>
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP, MySQL</p>
 
       <h3>Mycreations</h3>
