--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -191,7 +191,7 @@ ul {
         <li><strong>Backend:</strong> PHP</li>
         <li><strong>Framework:</strong> Laravel</li>
         <li><strong>Database:</strong> MySQL</li>
-        <li><strong>IDE:</strong> VSCode</li>
+        <li><strong>IDE:</strong> Visual Studio Code</li>
       </ul>
       <h2>Projects</h2>
       <h3>EmpowerMental</h3>
@@ -203,12 +203,12 @@ ul {
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
       <h3>Culinary Destination</h3>
-      <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menu, view orders and a fully functional visually appealing sales analytical dashboard potentially payment integration, providing a complete e-commerce solution for the food industry.</p>
-      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP, MySQL</p>
+      <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menus, view orders and a fully functional visually appealing sales analytics dashboard with payment integration, providing a complete e-commerce solution for the food industry.</p>
+      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
       <h3>Mycreations</h3>
       <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
-      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP</p>
+      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Core)</p>
       
     </div>
 
@@ -218,21 +218,21 @@ ul {
 
        <h2>Experience</h2>
       <h3>PHP Developer | Onkar E Learnings & Solutions LLP</h3>
-      <p><em>March 01, 2025 — Present</em></p>
+      <p><em>March 1, 2025 — Present</em></p>
       <ul>
         <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
         <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
         <li>Built and integrated APIs for various functionalities.</li>
         <li>Implemented payment gateway integrations for e-commerce solutions.</li>
-        <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
+        <li>Managed server environments (cpanel, aapanel, VPS, Shared Hosting) and DNS configurations.</li>
         <li>Engaged directly with clients to understand requirements and provide solutions.</li>
         <li>Demonstrated leadership in project execution and problem-solving.</li>
       </ul>
        <h2>Education</h2>
       <ul>
-        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024)</li>
-        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021)</li>
-        <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, Bachelor of Engineering (Information Technology), Dombivli (2021-2024)</li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma in Information Technology, Asangaon (2017-2021)</li>
+        <li><strong>Shakuntala Vidyalaya</strong>, Secondary School Certificate (SSC) — Shakuntala Vidyalaya (2016–2017)</li>
       </ul>
     </div>
   </div>
