--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -203,7 +203,7 @@ ul {
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
       <h3>Culinary Destination</h3>
-      <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin admin manage menus, view orders and a fully functional visually appealing sales analytics dashboard with payment integration, providing a complete e-commerce solution for the food industry.</p>
+      <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin manage menus, view orders and a fully functional visually appealing sales analytics dashboard with payment integration, providing a complete e-commerce solution for the food industry.</p>
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
       <h3>Mycreations</h3>
@@ -224,7 +224,7 @@ ul {
         <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
         <li>Built and integrated APIs for various functionalities.</li>
         <li>Implemented payment gateway integrations for e-commerce solutions.</li>
-        <li>Managed server environments (cpanel, aapanel, VPS, Shared Hosting) and DNS configurations.</li>
+        <li>Managed server environments (cPanel, aaPanel, VPS, Shared Hosting) and DNS configurations.</li>
         <li>Engaged directly with clients to understand requirements and provide solutions.</li>
         <li>Demonstrated leadership in project execution and problem-solving.</li>
       </ul>
