--- a/theme9.html
+++ b/theme9.html
@@ -334,7 +334,7 @@
 
             <!-- 6. CONTACT (Clean Link Section) -->
             <section id="contact" class="pt-8 text-center">
-                <h2 class="section-heading header-serif mx-auto">Get in Touch</h2>
+                <h2 class="section-heading header-serif mx-auto">Get in Touch</h2> <br><br>
                 <div class="p-8 bg-white rounded-xl border border-gray-200 shadow-lg inline-block max-w-lg mx-auto">
                     <p class="text-lg mb-4 text-gray-700">
                         I'm always open to new opportunities and collaborations. Feel free to reach out!
