--- a/theme5.html
+++ b/theme5.html
@@ -129,8 +129,9 @@
                 
                 <!-- Article 1: About Me -->
                 <article class="lg:col-span-2 p-4 border-r border-gray-200 lg:pr-8">
-                    <div class="h-64 mb-6 bg-gray-100 flex items-end p-4" style="background-image: url('https://placehold.co/800x400/fff/000?text=ADITYA+BARVE+\\n+Developer'); background-size: cover; background-position: center;">
-                       <br> <h3 class="text-4xl font-bold italic bg-black text-white p-2" style="font-family: 'Playfair Display', serif;">Hello World: The Developer's Journey</h3>
+                                        <!-- Updated placeholder image URL and removed unnecessary <br> tag -->
+                    <div class="h-64 mb-6 bg-gray-100 flex items-end p-4" style="background-image: url('https://placehold.co/800x400/1f2937/ffffff?text=Coding+Blueprint'); background-size: cover; background-position: center;">
+                        <h3 class="text-4xl font-bold italic bg-black text-white p-2" style="font-family: 'Playfair Display', serif;">Hello World: The Developer's Journey</h3>
                     </div>
                     <p class="text-sm uppercase tracking-widest font-semibold text-gray-600 mb-4">Byline: About Me</p>
                     <div class="space-y-4 text-lg" style="color: var(--color-text-body);">
