--- a/theme5.html
+++ b/theme5.html
@@ -237,7 +237,7 @@
                 
                 <!-- Project 1: Culinary Destination (PHP/Laravel) -->
                 <div class="project-card rounded-lg shadow-md">
-                    <div class="project-card-image" style="background-color: var(--color-accent);">Culinary Destination <span class="text-xs block"> E-commerce</span></div>
+                    <div class="project-card-image" style="background-color: var(--color-accent);">Culinary Destination <br><span class="text-xs block">E-commerce</span></div>
                     <div class="p-6">
                         <p class="text-xs uppercase font-semibold mb-1 text-gray-500">Full-Scale System</p>
                         <h3 class="text-2xl font-bold mb-3" style="font-family: 'Playfair Display', serif;">Culinary Destination</h3>
@@ -252,7 +252,7 @@
 
                 <!-- Project 2: Codechieve (PHP/Laravel) -->
                 <div class="project-card rounded-lg shadow-md">
-                    <div class="project-card-image">Codechieve <span class="text-xs block"> Freelance Platform</span></div>
+                    <div class="project-card-image">Codechieve <br><span class="text-xs block">Freelance Platform</span></div>
                     <div class="p-6">
                         <p class="text-xs uppercase font-semibold mb-1 text-gray-500">Digital Solutions</p>
                         <h3 class="text-2xl font-bold mb-3" style="font-family: 'Playfair Display', serif;">Codechieve</h3>
@@ -267,7 +267,7 @@
 
                 <!-- Project 3: EmpowerMental (PHP/Laravel) -->
                 <div class="project-card rounded-lg shadow-md">
-                    <div class="project-card-image">EmpowerMental <span class="text-xs block"> Wellness App</span></div>
+                    <div class="project-card-image">EmpowerMental <br><span class="text-xs block">Wellness App</span></div>
                     <div class="p-6">
                         <p class="text-xs uppercase font-semibold mb-1 text-gray-500">Full-Stack Wellness</p>
                         <h3 class="text-2xl font-bold mb-3" style="font-family: 'Playfair Display', serif;">EmpowerMental</h3>
