--- a/theme5.html
+++ b/theme5.html
@@ -244,7 +244,7 @@
                         <p class="text-sm mb-4 text-gray-700">
                             A full-scale online dine-in ordering system for restaurants. Features ordering, an admin panel, and a fully functional visually appealing sales analytical dashboard.
                         </p>
-                        <a href="#" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
+                        <a href="https://hoteltest.empowermental.co.in/" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
                             View Consumer Dashboard →
                         </a>
                     </div>
@@ -259,7 +259,7 @@
                         <p class="text-sm mb-4 text-gray-700">
                             A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions for startups and small businesses.
                         </p>
-                        <a href="#" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
+                        <a href="https://codechieve.com" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
                             View Project →
                         </a>
                     </div>
@@ -274,7 +274,7 @@
                         <p class="text-sm mb-4 text-gray-700">
                             A web application designed to support mental well-being. Showcases full-stack development capabilities, user interaction, and data management.
                         </p>
-                        <a href="#" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
+                        <a href="https://empowermental.co.in/" class="text-sm font-semibold text-black hover:text-gray-500 underline transition duration-300">
                             View Project →
                         </a>
                     </div>
