--- a/theme1.html
+++ b/theme1.html
@@ -30,7 +30,7 @@
         }
 
         /* Container - Simulates a folded paper */
-        newspaper-container {
+        #newspaper-container {
             max-width: 1200px;
             margin: 20px auto;
             background-color: var(--color-paper);
@@ -69,7 +69,7 @@
         }
 
         /* Masthead Styling (The Title/Banner) */
-        masthead {
+        #masthead {
             text-align: center;
             padding-bottom: 1rem;
             border-bottom: 5px solid var(--color-ink);
