--- a/theme5.html
+++ b/theme5.html
@@ -343,10 +343,10 @@
                 <p class="text-xs text-gray-500 mb-2">Connect with me on:</p>
                 <div class="flex justify-center space-x-6 text-gray-400">
                     <!-- Placeholder Icons for Social Links -->
-                    <a href="#" class="hover:text-white transition duration-300" title="LinkedIn">
+                    <a href="https://linkedin.com/in/aditya-barve=fswd" class="hover:text-white transition duration-300" title="LinkedIn">
                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
                     </a>
-                    <a href="#" class="hover:text-white transition duration-300" title="GitHub">
+                    <a href="https://github.com/adityabarve28" class="hover:text-white transition duration-300" title="GitHub">
                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 3c0-1.74-2.67-1.74-2.67-1.74s-2.7 1.74-2.67 1.74A5.44 5.44 0 0 0 10.14 8.5v3.87a3.37 3.37 0 0 0-.94 2.61c0 5.45-3.3 6.64-6.44 7a3.37 3.37 0 0 0-2.61.94"/></svg>
                     </a>
                 </div>
