--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -227,8 +227,8 @@ ul {
       </ul>
       <h2>Education</h2>
       <ul>
-        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024)</li>
-        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021)</li>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024) <b>7.2 CGPI</b></li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021) <b>~87%</b></li>
         <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
       </ul>
 <!--       <h3>Mycreations</h3>
