--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -206,9 +206,9 @@ ul {
       <p>A full-scale online dine-in ordering system for restaurants. Features include ordering section for customers, an admin panel to let admin manage menus, view orders and a fully functional visually appealing sales analytics dashboard with payment integration, providing a complete e-commerce solution for the food industry.</p>
       <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
 
-      <h3>Mycreations</h3>
+      <h3>Mycreations (Project Under Development)</h3>
       <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
-      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP (Core)</p>
+      <p><strong>Technologies:</strong> HTML, CSS, Bootstrap, PHP, Laravel, MySQL</p>
       
     </div>
 
