--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -236,8 +236,8 @@ ul {
       </ul>
        <h2>Socials</h2>
       <ul>
-        <li><strong>LinkedIn</strong>https://linkedin.com/in/aditya-barve-fswd</li>
-        <li><strong>GitHub</strong>https://github.com/adityabarve28</b></li>
+        <li><strong>LinkedIn: </strong>https://linkedin.com/in/aditya-barve-fswd</li>
+        <li><strong>GitHub: </strong>https://github.com/adityabarve28</b></li>
         <!-- <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li> -->
       </ul>
     </div>
