Update experience section in resume

--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -217,8 +217,19 @@ ul {
     
 
        <h2>Experience</h2>
+      <h3>Software Developer | G-Ordinateur Pvt Ltd.</h3>
+      <p><em>February 02, 2026 — Present</em></p>
+      <ul>
+        <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
+        <!-- <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
+        <li>Built and integrated APIs for various functionalities.</li>
+        <li>Implemented payment gateway integrations for e-commerce solutions.</li>
+        <li>Managed server environments (cPanel, aaPanel, VPS, Shared Hosting) and DNS configurations.</li>
+        <li>Engaged directly with clients to understand requirements and provide solutions.</li>
+        <li>Demonstrated leadership in project execution and problem-solving.</li> -->
+      </ul>
       <h3>PHP Developer | Onkar E Learnings & Solutions LLP</h3>
-      <p><em>March 1, 2025 — Present</em></p>
+      <p><em>March 1, 2025 — January 25, 2026</p>
       <ul>
         <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
         <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
